<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ts_background">

    <ImageView
        android:id="@+id/ivExploreLogo"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:alpha="0.85"
        android:contentDescription="@string/home_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/techscoop_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvExploreTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/feed_title"
        android:textAppearance="?attr/textAppearanceHeadlineSmall"
        android:textColor="@color/ts_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivExploreLogo" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/svNewsSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:queryHint="@string/search_hint"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvExploreTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNewsFeed"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/svNewsSearch"
        tools:listitem="@layout/item_news_card" />

</androidx.constraintlayout.widget.ConstraintLayout>
